--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
-/* #root {
-  max-width: 1280px;
+#root {
+  max-width: 100vw;
+  display: flex;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  /* padding: 2rem; */
+  /* text-align: center; */
 }
 /*
 .logo {
@@ -38,4 +39,4 @@
 
 .read-the-docs {
   color: #888;
-} */ */
+} */
