--- a/src/components/Cards/cards.css
+++ b/src/components/Cards/cards.css
@@ -1,24 +1,51 @@
+.cardpareent {
+  display: flex;
+}
+.cardpareent > * {
+  flex: 1;
+  flex-basis: 100%;
+}
 .card {
   background: white;
   padding: 20px;
   border-radius: 20px;
-  margin: unset 20px;
-  /* display: flex; */
+  margin: 0 10px;
+  font-size: 16px;
 }
 
 .cardbody {
   display: flex;
   align-items: center;
-
+  flex-direction: column;
+  width: 100%;
 }
+
+
 .cardinner {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  width: 100%;
+  flex: 1;
+  gap: 20px;
+}
+
+.cardinner > p {
+  font-size: 16px;
+}
+
+.cardinner > div > p {
+  line-height: 0%;
+  font-size: 10px;
+}
+.cardinner > div > p > span {
+  font-size: 10px;
 }
 
 .space {
   margin: 10px unset;
   display: block;
-  height: 5px;
+  width: 100%;
+  border: 5px soild #EFF3F5;
+
 }
