--- a/src/components/NavTop/navtop.css
+++ b/src/components/NavTop/navtop.css
@@ -10,7 +10,7 @@
 .topnav__search {
     position: relative;
     height: 50px;
-    background-color:black;
+    background-color: #E7EDF1;;
     border-radius: 5px;
     display: flex;
     align-items: center;
@@ -27,7 +27,7 @@
     padding: 10px 60px 10px 20px;
     color: black;
     font-size: 1rem;
-    background-color: #f3f7fa;
+    background-color: #E7EDF1;
 }
 .topnav__search > input::placeholder {
     color: #015555;
