--- a/src/components/Sidebar/sidebar.css
+++ b/src/components/Sidebar/sidebar.css
@@ -1,11 +1,34 @@
 .sidebar {
-    height: 100vh;
-    min-width: 6vw;
-    position: fixed;
-    left: 0;
-    top: 0;
-    transition: all 0.3s ease;
-    background-color: red;
-    box-shadow: var(--box-shadow);
+  height: 100vh;
+  min-width: 6vw;
+  position: fixed;
+  left: 0;
+  top: 0;
+  transition: all 0.3s ease;
+  background-color: white;
+}
+.sidebar__logo {
+  flex-direction: column;
+  display: flex;
+  margin: 5px;
 }
 
+.sidebar__logo .sidebar__item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: max-content;
+}
+
+.sidebar__item {
+  /* background: #015555; */
+  border-radius: 30%;
+  width: 50px;
+  height: 50px;
+  margin-top: 10px;
+  text-align: center;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
