--- a/src/components/SecondBar/secondbar.css
+++ b/src/components/SecondBar/secondbar.css
@@ -106,7 +106,11 @@
 .msgprofile {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: start;
+}
+
+.msgprofile img {
+  margin-right: 30px;
 }
 
 .smgText {
