--- a/src/components/Table/table.css
+++ b/src/components/Table/table.css
@@ -17,20 +17,23 @@
 
   tr {
     text-align: left;
+    border-bottom: 3px solid black;
   }
 
   th,
   td {
     text-transform: capitalize;
     padding: 10px 10px;
-    font-size: 0.8rem;
+    /* font-size: 0.8rem; */
+    font-size: 14px;
+    font-weight: bold;
+    white-space: nowrap;
   }
   td {
     color: #464646;
   }
 
   tbody > tr:hover {
-    background-color: #fff8f7;
-    /* background-color: #FFF8F7; */
-    /* color: var(--txt-white); */
+    background-color: #F3F7FA;
+    color: #4BA8A8;
   }
