--- a/src/components/Layout/layout.css
+++ b/src/components/Layout/layout.css
@@ -1,7 +1,6 @@
 
 .layout {
     overflow: hidden;
-    width: 100%;
 }
 
 .layout__content {
@@ -12,9 +11,7 @@
 }
 
 .layout__content-main {
-    width: 100%;
-    display: flex;
-    /* background: #0155550; */
+    padding: 20px;
 }
 
 @media only screen and (max-width: 800px) {
