--- a/src/components/SecondBar/secondbar.css
+++ b/src/components/SecondBar/secondbar.css
@@ -1,6 +1,7 @@
 .secondbar {
   height: max-content;
   width: 22vw;
+  min-width: 250px;
   transition: all 0.3s ease;
   background-color: #ffffff;
   padding: 20px;
