--- a/src/components/Main/main.css
+++ b/src/components/Main/main.css
@@ -17,7 +17,7 @@
 
 .tablebody {
   background-color: white;
-  padding: 5px 0 20;
+  padding: 20px  20px;
   margin: 40px 0px 0 20px;
   border-radius: 20px;
 }
@@ -27,6 +27,10 @@
   align-items: center;
   justify-content: space-between;
   padding: 10px;
+}
+
+.taskseperate h3 {
+  color: #005555;
 }
 
 .selectorinput {
