--- a/src/components/SecondBar/secondbar.css
+++ b/src/components/SecondBar/secondbar.css
@@ -1,12 +1,19 @@
 .secondbar {
-  height: max-content;
+  /* height: max-content; */
   width: 22vw;
-  min-width: 250px;
+  min-width: 396px;
   transition: all 0.3s ease;
   background-color: #ffffff;
   padding: 20px;
   margin: 0 0 0 20px;
   overflow-x: hidden;
+
+
+  /* position: fixed;
+  right: 0;
+  top: 61px;
+  transition: all 0.3s ease;
+  background-color: white; */
 }
 
 .sideHeader {
@@ -131,6 +138,7 @@
 
 .sideSubtitle {
   color: #768396;
+  margin: 20px 0;
 }
 
 /* chip */
