--- a/src/components/SecondBar/secondbar.css
+++ b/src/components/SecondBar/secondbar.css
@@ -1,6 +1,7 @@
 .secondbar {
-  /* height: max-content; */
-  width: 22vw;
+  height: max-content;
+  width: 100vw;
+  /* width: 22vw; */
   min-width: 396px;
   transition: all 0.3s ease;
   background-color: #ffffff;
@@ -15,6 +16,11 @@
   transition: all 0.3s ease;
   background-color: white; */
 }
+
+@media only screen and (max-width: 00px) {
+  
+}
+
 
 .sideHeader {
   display: flex;
